Adding use of secrets

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      VAR1: ${{ secrets.AZURE_APIM_ENDPOINT }}
+      VAR2: ${{ secrets.APIM_SUB_KEY }}
 
     steps:
     - name: Checkout code
