Adding ability to manually trigget GitHub Action workflow

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
+
+z    env:
       VAR1: ${{ secrets.AZURE_APIM_ENDPOINT }}
       VAR2: ${{ secrets.APIM_SUB_KEY }}
 
