Fixed bug in unittests.yml

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -10,8 +10,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      VAR1: ${{ secrets.AZURE_APIM_ENDPOINT }}
-      VAR2: ${{ secrets.APIM_SUB_KEY }}
+      AZURE_APIM_ENDPOINT: ${{ secrets.AZURE_APIM_ENDPOINT }}
+      APIM_SUB_KEY: ${{ secrets.APIM_SUB_KEY }}
 
     steps:
     - name: Checkout code
