--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -28,4 +28,4 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
-      run: python -m unittest tests/test_docsearch.py
+      run: python -m unittest discover -s tests
