Deliberately adding broken url for testing, and updated cron for check URLs

--- a/.github/workflows/checkurls.yml
+++ b/.github/workflows/checkurls.yml
@@ -1,8 +1,11 @@
 name: Check URLs
 
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: '30 8 * * *'
+    - cron: '30 8 * * 1'
   workflow_dispatch:
   
 jobs:
